# auditable-scientific-agent-kernel

./: README.md  pyproject.toml
src/agent_runtime/: api.py
src/agent_runtime/evals/: dataset.py  failure_episode.py  graders.py  harness.py  models.py  optimizer.py  regression.py  runner.py  skills_tracker.py
src/agent_runtime/evals/tasks/: runtime_tasks.jsonl
src/agent_runtime/graph/: builder.py  edges.py  nodes.py  persistence.py  reducers.py  service.py  state.py
src/agent_runtime/jobs/: models.py  store.py  worker.py
src/agent_runtime/mcp/: bridge.py  client.py
src/agent_runtime/mcp_clients/: models.py  policy.py  registry.py
src/agent_runtime/scientific/: compiler.py  executor.py  modelspec.py  parser.py  repairs.py  static_analysis.py  validators.py
tests/: test_durable_macro_agent.py  test_eval_api.py  test_eval_dataset.py  test_eval_feedback_loop.py  test_eval_graders.py  test_graph_approval.py  test_graph_persistence.py  test_graph_reducers.py  test_graph_routing.py  test_graph_state_history.py  test_job_cancellation.py  test_job_worker.py  test_mcp_approval_policy.py  test_mcp_capability_registry.py  test_mcp_client_bridge.py  test_modelspec_domain_validation.py  test_scientific_agent_integration.py  test_scientific_compiler.py
